objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Bookings_Schematic_Editor_PG_Adjustment__c</fullName>
        <label>Bookings Schematic Editor PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Schematic_Editor_PG_Commit__c</fullName>
        <label>Bookings Schematic Editor PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Schematic_Editor_PG_Pipeline__c</fullName>
        <label>Bookings Schematic Editor PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Schematic_Editor_PG_Total__c</fullName>
        <formula>Bookings_Schematic_Editor_PG_Adjustment__c + Bookings_Schematic_Editor_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Schematic Editor PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Services_PS_Adjustment__c</fullName>
        <label>Bookings Services PS Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Services_PS_Commit__c</fullName>
        <label>Bookings Services PS Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Services_PS_Pipeline__c</fullName>
        <label>Bookings Services PS Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Services_PS_Total__c</fullName>
        <formula>Bookings_Services_PS_Commit__c + Bookings_Services_PS_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Services PS Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Sigrity_PG_Adjustment__c</fullName>
        <label>Bookings Sigrity PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Sigrity_PG_Commit__c</fullName>
        <label>Bookings Sigrity PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Sigrity_PG_Pipeline__c</fullName>
        <label>Bookings Sigrity PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Sigrity_PG_Total__c</fullName>
        <formula>Bookings_Sigrity_PG_Adjustment__c + Bookings_Sigrity_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Sigrity PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_PG_Adjustment__c</fullName>
        <label>Bookings Synthesis PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_PG_Commit__c</fullName>
        <label>Bookings Synthesis PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_PG_Pipeline__c</fullName>
        <label>Bookings Synthesis PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_PG_Total__c</fullName>
        <formula>Bookings_Synthesis_PG_Adjustment__c + Bookings_Synthesis_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Synthesis PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_Test_Adjustment__c</fullName>
        <label>Bookings Synthesis &amp; Test Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_Test_Commit__c</fullName>
        <label>Bookings Synthesis &amp; Test Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_Test_Pipeline__c</fullName>
        <label>Bookings Synthesis &amp; Test Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Synthesis_Test_Total__c</fullName>
        <formula>Bookings_Synthesis_Test_Commit__c + Bookings_Synthesis_Test_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Synthesis &amp; Test Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SystemLevel_Design_Adjustment__c</fullName>
        <label>Bookings System-Level Design Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SystemLevel_Design_Commit__c</fullName>
        <label>Bookings System-Level Design Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SystemLevel_Design_Pipeline__c</fullName>
        <label>Bookings System-Level Design Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_SystemLevel_Design_Total__c</fullName>
        <formula>Bookings_SystemLevel_Design_Commit__c + Bookings_SystemLevel_Design_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings System-Level Design Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_System_Level_Design_PG_Adjust__c</fullName>
        <label>Bookings System Level Design PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_System_Level_Design_PG_Commit__c</fullName>
        <label>Bookings System Level Design PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_System_Level_Design_PG_Pipeline__c</fullName>
        <label>Bookings System Level Design PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_System_Level_Design_PG_Total__c</fullName>
        <formula>Bookings_System_Level_Design_PG_Adjust__c + Bookings_System_Level_Design_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings System Level Design PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Test_PG_Adjustment__c</fullName>
        <label>Bookings Test PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Test_PG_Commit__c</fullName>
        <label>Bookings Test PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Test_PG_Pipeline__c</fullName>
        <label>Bookings Test PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Test_PG_Total__c</fullName>
        <formula>Bookings_Test_PG_Adjustment__c + Bookings_Test_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Test PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Timing_Analysis_PG_Adjustment__c</fullName>
        <label>Bookings Timing Analysis PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Timing_Analysis_PG_Commit__c</fullName>
        <label>Bookings Timing Analysis PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Timing_Analysis_PG_Pipeline__c</fullName>
        <label>Bookings Timing Analysis PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Timing_Analysis_PG_Total__c</fullName>
        <formula>Bookings_Timing_Analysis_PG_Adjustment__c + Bookings_Timing_Analysis_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Timing Analysis PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Total_Commit__c</fullName>
        <formula>Total_Software__c + Total_Hardware__c + Bookings_VIP_Total__c + Total_IP__c + Bookings_IP_Royalty_Total__c +  Total_Services__c  + Total_Includes_CCP__c + Bookings_IP_Tensilica_Total__c + Bookings_IP_Tensilica_Royalty_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Total Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Total_Pipeline__c</fullName>
        <formula>Hardware_Pipeline__c + Software_Pipeline__c + Bookings_VIP_Pipeline__c + IP_Pipeline__c + Services_Pipeline__c + Includes_CCP_Pipeline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Total Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_Adjustment__c</fullName>
        <label>Bookings VIP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_Commit__c</fullName>
        <label>Bookings VIP Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_PS_Adjustment__c</fullName>
        <label>Bookings VIP PS Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_PS_Commit__c</fullName>
        <label>Bookings VIP PS Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_PS_Pipeline__c</fullName>
        <label>Bookings VIP PS Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_PS_Total__c</fullName>
        <formula>Bookings_VIP_PS_Commit__c + Bookings_VIP_PS_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings VIP PS Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_Pipeline__c</fullName>
        <label>Bookings VIP Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_VIP_Total__c</fullName>
        <formula>Bookings_VIP_Commit__c + Bookings_VIP_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings VIP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_From_New_Bookings_Total__c</fullName>
        <formula>Cash_frm_Nw_Bookings_Adjust__c + Cash_from_New_Bookings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash From New Bookings Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_From_New_Pipeline__c</fullName>
        <label>Cash From New Bookings Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_From_New_Tensilica_Bookings__c</fullName>
        <description>Holds separately IP, IP Royalty, IP Tensilica and IP Tensilica Royalty opportunity cash for the current quarter from so that it could be deducted from the Tensilica RVP&apos;s Cash Bookings numbers to avoid double inclusion at WWSF level.</description>
        <label>Cash From New Tensilica Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_From_New_Tensilica_Pipeline__c</fullName>
        <description>Holds separately IP, IP Royalty, IP Tensilica and IP Tensilica Royalty opportunity cash for the current quarter from so that it could be deducted from the Tensilica RVP&apos;s Cash Bookings numbers to avoid double inclusion at WWSF level.</description>
        <label>Cash From New Tensilica Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_frm_Nw_Bookings_Adjust__c</fullName>
        <description>Cash from New Bookings Adjustment</description>
        <label>Cash Adjustment from New Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_from_New_Bookings__c</fullName>
        <label>Cash from New Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commit_pipeline__c</fullName>
        <label>% Commit/Pipeline</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Exp_Adjust__c</fullName>
        <description>Operating Expenses from Cost Center Expense</description>
        <label>Cost Center Expense Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Exp_Total__c</fullName>
        <formula>Cost_Center_Exp__c  + Cost_Center_Exp_Adjust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Center Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Exp__c</fullName>
        <label>Cost Center Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FX_Adjustment_to_Dollar__c</fullName>
        <description>Operating Expenses from FX Adjustment to Dollar</description>
        <label>FX Adjustment to Dollar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Target</label>
        <referenceTo>Forecast_Target__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hardware_Adjustment__c</fullName>
        <description>Hardware Adjustment by RVP</description>
        <label>Bookings Hardware Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware_Pipeline__c</fullName>
        <label>Bookings Hardware Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Bookings Hardware Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeadCount__c</fullName>
        <label>HeadCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Headcount_Adjustment__c</fullName>
        <description>Headcount Adjustment</description>
        <label>Head Count Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Adjustment__c</fullName>
        <description>IP Booking Adjustments to be filled by RVP</description>
        <inlineHelpText>IP Booking Adjustments to be filled by RVP</inlineHelpText>
        <label>Bookings IP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP_Pipeline__c</fullName>
        <label>Bookings IP Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>Bookings IP Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_CCP_Adjustment__c</fullName>
        <label>Bookings CCP Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_CCP_Pipeline__c</fullName>
        <label>Bookings CCP Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_CCP__c</fullName>
        <label>Bookings CCP Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Bookings__c</fullName>
        <formula>Total_Maint_HW__c +  Total_Maint_SW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Maint Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maint_HW_Adjustment__c</fullName>
        <description>Maintenance - Hardware Revenue adjustment to be filled by SFO</description>
        <label>Revenue Maintenance Hardware Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_SW_Adjustment__c</fullName>
        <description>Maintenance - Software Revenue adjustment to be filled by SFO</description>
        <label>Revenue Maintenance Software Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Hardware__c</fullName>
        <label>Revenue Maintenance Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Software__c</fullName>
        <label>Revenue Maintenance Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Expenses_Total__c</fullName>
        <formula>FX_Adjustment_to_Dollar__c +  Cost_Center_Exp_Adjust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Expenses Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_HW_Adjustment__c</fullName>
        <description>Product - Hardware Revenue adjustment</description>
        <label>Revenue Product - Hardware Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_SW_Revenue_Adjust__c</fullName>
        <description>Product - Software Revenue adjustment</description>
        <label>Revenue Product - Software Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Bookings__c</fullName>
        <formula>Total_Hardware__c +  Total_Software__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Hardware__c</fullName>
        <label>Revenue Product Hardware</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Software__c</fullName>
        <label>Revenue Product Software</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quarter</label>
        <referenceTo>Expected_Close_Quarter__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rev_Services_Adjustment__c</fullName>
        <description>Services Booking Adjustments to be filled by RVP</description>
        <label>Revenue Services Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rev_Services__c</fullName>
        <label>Revenue Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_CCP_Maint__c</fullName>
        <label>Revenue CCP Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_CCP_Prod__c</fullName>
        <label>Revenue CCP Prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_CCP_Total__c</fullName>
        <formula>Revenue_CCP_Maint__c +  Revenue_CCP_Prod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue CCP Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Hardware_Pipeline__c</fullName>
        <label>Revenue Hardware Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Adjustment__c</fullName>
        <description>Holds revenue of IP Royalty opportunity.</description>
        <label>Revenue IP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Pipeline__c</fullName>
        <label>Revenue IP Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Royalty_Adjustment__c</fullName>
        <description>Holds adjustment of IP Royalty opportunity revenue.</description>
        <label>Revenue IP Royalty Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Royalty_Pipeline__c</fullName>
        <label>Revenue IP Royalty Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Royalty_Total__c</fullName>
        <formula>Revenue_IP_Royalty__c +  Revenue_IP_Royalty_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue IP Royalty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Royalty__c</fullName>
        <label>Revenue IP Royalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Adjustment__c</fullName>
        <description>Holds adjustment of IP Tensilica opportunity revenue.</description>
        <label>Revenue IP Tensilica Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Pipeline__c</fullName>
        <label>Revenue IP Tensilica Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Royalty_Adjustment__c</fullName>
        <description>Holds adjustment of IP Tensilica Royalty opportunity revenue.</description>
        <label>Revenue IP Tensilica Royalty Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Royalty_Pipeline__c</fullName>
        <label>Revenue IP Tensilica Royalty Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Royalty_Total__c</fullName>
        <formula>Revenue_IP_Tensilica_Royalty__c +  Revenue_IP_Tensilica_Royalty_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue IP Tensilica Royalty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Royalty__c</fullName>
        <description>Holds revenue of IP Tensilica Royalty opportunity.</description>
        <label>Revenue IP Tensilica Royalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica_Total__c</fullName>
        <formula>Revenue_IP_Tensilica__c +  Revenue_IP_Tensilica_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue IP Tensilica Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Tensilica__c</fullName>
        <description>Holds revenue of IP Tensilica opportunity.</description>
        <label>Revenue IP Tensilica</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP_Total__c</fullName>
        <description>Sum of Revenue of IP and adjustment.</description>
        <formula>Revenue_IP__c +  Revenue_IP_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue IP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_IP__c</fullName>
        <description>Holds revenue of IP opportunity.</description>
        <label>Revenue IP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Maint_Hardware_Pipeline__c</fullName>
        <label>Revenue Maintenance Hardware Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Maint_Software_Pipeline__c</fullName>
        <label>Revenue Maintenance Software Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Service_Pass_Pipeline__c</fullName>
        <label>Revenue Service Pass Through Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Service_Pipeline__c</fullName>
        <label>Revenue Service Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Services_Pipeline__c</fullName>
        <label>Revenue Services Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Software_Pipeline__c</fullName>
        <label>Revenue Software Pipeline</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Total__c</fullName>
        <formula>Total_Maint_HW__c +  Total_Maint_SW__c +  Total_Product_HW__c +  Total_Product_SW__c + Revenue_VIP_Total__c + Total_Rev_Services__c + Total_Servc_Pass_Through__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_VIP_Adjustment__c</fullName>
        <label>Revenue VIP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_VIP_Pipeline__c</fullName>
        <label>Revenue VIP Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_VIP_Total__c</fullName>
        <formula>Revenue_VIP__c + Revenue_VIP_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue VIP Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_VIP__c</fullName>
        <label>Revenue VIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servc_Pass_Through_Adjust__c</fullName>
        <description>Services Pass Through Revenue adjustment to be filled by SFO</description>
        <label>Revenue Services Pass Through Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servc_Pass_Through__c</fullName>
        <label>Servc Pass Through</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Adjustment__c</fullName>
        <description>Services Booking Adjustments to be filled by RVP</description>
        <label>Bookings Services Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Pipeline__c</fullName>
        <label>Bookings Services Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <label>Bookings Services Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_reporting__c</fullName>
        <formula>Total_Services__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Adjustment__c</fullName>
        <description>Software Adjustment by RVP</description>
        <label>Bookings Software Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software_Pipeline__c</fullName>
        <label>Bookings Software Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Software__c</fullName>
        <label>Bookings Software Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
</CustomObject>